Use Array instead of List

--- a/a2/A2.md
+++ b/a2/A2.md
@@ -15,13 +15,13 @@
 
 **Description:**
 
-A librarian in Toronto found your company to develop a new book management system. As a newbie, you are asked by your manager to create a simple demo for the system. Your supervisor has helped to construct a basic framework and you need to complete the remaining work.
+A librarian in Toronto found your company to develop a new book management system. As a new staff, you are asked by your manager to create a simple demo for the system. Your supervisor has helped to construct a basic framework and you need to complete the remaining work.
 
-As shown in Figure 1, The UI designed for the demo includes a book list window and a dialog window for book properties. With the interface, users can add, remove, update and search for books.
+As shown in Figure 1, The UI designed for the demo includes a book list window and a property dialog window. With the interface, users can add, remove, update and search for books.
 
-The required functionality of the demo are as follows.
+The required functionality of the demo is as follows.
 
-1. When running the application, the book list window will show up and all the book titles will be listed in the middle of the window.
+1. When running the application, the book list window will pop up and all the book titles will be listed in the middle of the window.
 2. Users can put a keyword in the top-left text field and then click the "SEARCH" button to search for books whose title contains the input keyword. Now, only the qualified book titles will show on the list.
 3. The "CLEAR" button is designed to clean the search results. Specifically, it will clear the keyword in the text field and list all the books again.
 4. When the "ADD" button is clicked, the property dialog window will show up. After filling up the fields (all the fields are required) in the dialog, users can click the "SAVE" button to add the book. The "CANCEL" button can be used to abort the adding process and close the dialog window.
@@ -34,5 +34,6 @@ Other instructions:
 2. Please add your code only to where there's a "TODO" comment (in AddBookDialog.java, BookListWindow.java, BookStorage.java and UpdateBookDialog.java) and leave other code unchanged.
 3. The book titles can be taken as unique identifiers and thus cannot be duplicated and are not editable once added.
 4. Suppose all the books get only 3 categories: Programming, Database and Design.
-5. Please create more than 10 arbitrary books in the initBooks() method of BookStorage. 
+5. Please create more than 10 (and less than 100) arbitrary books in the initBooks() method of BookStorage. 
+6. The window styles may be affected by operating systems. All of the styles are acceptable.
 
