Remove lambda functions

--- a/a2/A2.md
+++ b/a2/A2.md
@@ -31,9 +31,10 @@ The required functionality of the demo is as follows.
 Other instructions:
 
 1. The main() method is in BookListWindow.java.
-2. Please add your code only to where there's a "TODO" comment (in AddBookDialog.java, BookListWindow.java, BookStorage.java and UpdateBookDialog.java) and leave other code unchanged.
+2. Please add your code only to where there's a "TODO" comment (in AddBookDialog.java, BookListWindow.java, BookStorage.java, UpdateBookDialog.java and BookPropertyDialog.java) and leave other code unchanged.
 3. The book titles can be taken as unique identifiers and thus cannot be duplicated and are not editable once added.
 4. Suppose all the books get only 3 categories: Programming, Database and Design.
 5. Please create more than 10 (and less than 100) arbitrary books in the initBooks() method of BookStorage. 
-6. The window styles may be affected by operating systems. All of the styles are acceptable.
+6. If there’s any problem with the input properties when adding/saving a book, pop up an error message dialog and do nothing.
+7. The window styles may be affected by operating systems. All of the styles are acceptable.
 
